--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>Virginie the super powerful coach</p>
 <p>Jean-Marc Lagacé</p>
     hello world
+    <p>Bernardo andre averhoff</p>
 
 </body>
 
