--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <p>Maurio Romeroca</p>
     <p>Kelly Tavityan Pessoa</p>
     <p>Guilherme</p>
     <p>Albertine GADJEGLO</p>
